--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
     "css-loader": "^0.23.1",
+    "modularscale-sass": "^2.1.1",
     "node-sass": "^3.8.0",
     "sass-loader": "^3.2.1",
     "style-loader": "^0.13.1",
