--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
 
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "sudo webpack -p",
-    "dev-server": "sudo webpack-dev-server"
+    "build": "webpack -p",
+    "dev-server": "webpack-dev-server"
   },
 
   "devDependencies": {
