--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "css-loader": "^0.23.1",
     "eslint": "1.6.0",
     "eslint-loader": "^1.3.0",
+    "html-loader": "^0.4.3",
+    "markdown-loader": "^0.1.7",
     "modularscale-sass": "^2.1.1",
     "node-sass": "^3.8.0",
     "sass-loader": "^3.2.1",
