--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "css-loader": "^0.23.1",
     "eslint": "1.6.0",
     "eslint-loader": "^1.3.0",
+    "file-loader": "^0.9.0",
     "html-loader": "^0.4.3",
+    "image-webpack-loader": "^1.8.0",
     "markdown-loader": "^0.1.7",
     "modularscale-sass": "^2.1.1",
     "node-sass": "^3.8.0",
