Fixing keyword in package.json

--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "keywords": [
     "webpack",
     "documentation",
-    "build",
-    "tool"
+    "build tool"
   ],
   "repository": {
     "type": "git",
