--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,7 @@
 {
     "extends": "eslint:recommended",
 
-    "ecmaFeatures": {
-        "modules": true,
-        "jsx": true
-    },
+    "parser": "babel-eslint",
 
     "env": {
         "browser": true,
