--- a/package.json
+++ b/package.json
@@ -27,24 +27,25 @@
   },
   "devDependencies": {
     "babel-core": "^6.10.4",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
     "css-loader": "^0.23.1",
-    "eslint": "1.6.0",
-    "eslint-loader": "^1.3.0",
+    "eslint": "3.0.1",
+    "eslint-loader": "^1.4.1",
     "modularscale-sass": "^2.1.1",
     "node-sass": "^3.8.0",
-    "sass-loader": "^3.2.1",
+    "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "react-router": "^2.5.1"
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1",
+    "react-router": "^2.5.2"
   }
 }
