--- a/package.json
+++ b/package.json
@@ -21,31 +21,32 @@
     "url": "https://github.com/webpack/webpack.io/issues"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -p",
-    "dev-server": "webpack-dev-server"
+    "start": "antwar -d",
+    "build": "antwar -b && npm run sitemap",
+    "deploy": "antwar -D",
+    "sitemap": "cd build && sitemap-static --prefix=http://webpack.io.github.io/ > sitemap.xml"
   },
   "devDependencies": {
-    "babel-core": "^6.10.4",
+    "antwar": "^0.6.0-beta1",
+    "antwar-helpers": "^0.2.1",
+    "antwar-prevnext-plugin": "^0.3.0",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.9.0",
     "css-loader": "^0.23.1",
     "eslint": "3.0.1",
     "eslint-loader": "^1.4.1",
+    "marked": "^0.3.5",
     "modularscale-sass": "^2.1.1",
+    "moment": "^2.14.1",
     "node-sass": "^3.8.0",
     "sass-loader": "^4.0.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "sitemap-static": "^0.3.1",
+    "style-loader": "^0.13.1"
   },
   "dependencies": {
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
+    "react-ghfork": "^0.3.5",
     "react-router": "^2.5.2"
   }
 }
