--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint": "3.0.1",
     "eslint-loader": "^1.4.1",
     "json-loader": "^0.5.4",
+    "markdown-loader": "^0.1.7",
     "marked": "^0.3.5",
     "modularscale-sass": "^2.1.1",
     "moment": "^2.14.1",
