--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "sitemap": "cd build && sitemap-static --prefix=http://webpack.io.github.io/ > sitemap.xml"
   },
   "devDependencies": {
-    "antwar": "^0.6.0-beta4",
+    "antwar": "^0.6.0",
     "antwar-cli": "^0.6.5",
     "antwar-helpers": "^0.2.3",
     "antwar-prevnext-plugin": "^0.3.0",
