--- a/package.json
+++ b/package.json
@@ -27,10 +27,14 @@
     "sitemap": "cd build && sitemap-static --prefix=http://webpack.io.github.io/ > sitemap.xml"
   },
   "devDependencies": {
-    "antwar": "^0.6.1",
+    "antwar": "^0.7.0-beta1",
     "antwar-cli": "^0.6.5",
     "antwar-helpers": "^0.3.0",
     "antwar-prevnext-plugin": "^0.3.0",
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
     "css-loader": "^0.23.1",
     "eslint": "3.0.1",
     "eslint-loader": "^1.4.1",
