--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "modularscale-sass": "^2.1.1",
     "moment": "^2.14.1",
     "node-sass": "^3.8.0",
+    "normalize.css": "^4.2.0",
     "prism-languages": "^0.3.1",
     "prismjs": "^1.5.1",
     "sass-loader": "^4.0.0",
