--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "css-loader": "^0.23.1",
     "eslint": "3.0.1",
     "eslint-loader": "^1.4.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "json-loader": "^0.5.4",
     "markdown-loader": "^0.1.7",
     "marked": "^0.3.5",
     "modularscale-sass": "^2.1.1",
