Adding the eslint-loader back again

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
         "no-undef": 2,
         "no-unreachable": 2,
         "no-unused-vars": 0,
-        "no-console": 0
+        "no-console": 0,
+        "semi": ["error", "always"]
     }
 }
