--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "antwar-helpers": "^0.7.4",
     "antwar-prevnext-plugin": "^0.4.0",
     "babel-core": "^6.10.4",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
