--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "build": "antwar -b && npm run sitemap",
     "deploy": "antwar -D",
     "lint": "eslint . --ext .js --ext .jsx",
+    "test": "npm run lint",
     "sitemap": "cd build && sitemap-static --prefix=http://webpack.github.io/webpack.io/ > sitemap.xml"
   },
   "devDependencies": {
