--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,10 @@
         "node": true
     },
 
+    "plugins": [
+        "markdown"
+    ],
+    
     rules: {
         "no-undef": 2,
         "no-unreachable": 2,
