--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "start": "antwar -d",
     "build": "antwar -b && npm run sitemap",
     "deploy": "antwar -D",
-    "lint": "eslint . --ext .js --ext .jsx",
+    "lint": "eslint . --ext .js --ext .jsx --ext .md",
     "test": "npm run lint",
     "sitemap": "cd build && sitemap-static --prefix=http://webpack.github.io/webpack.io/ > sitemap.xml"
   },
@@ -42,6 +42,7 @@
     "css-loader": "^0.23.1",
     "eslint": "3.0.1",
     "eslint-loader": "^1.4.1",
+    "eslint-plugin-markdown": "^1.0.0-beta.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "json-loader": "^0.5.4",
