--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "webpack.io",
+  "name": "webpack.js.org",
   "version": "0.0.0",
   "private": true,
   "description": "The main site for all things Webpack.",
-  "homepage": "https://github.com/webpack/webpack.io",
+  "homepage": "https://github.com/webpack/webpack.js.org",
   "author": "Greg Venech",
   "license": "ISC",
   "main": "n/a",
@@ -15,10 +15,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/webpack/webpack.io.git"
+    "url": "https://github.com/webpack/webpack.js.org.git"
   },
   "bugs": {
-    "url": "https://github.com/webpack/webpack.io/issues"
+    "url": "https://github.com/webpack/webpack.js.org/issues"
   },
   "scripts": {
     "start": "antwar -d",
@@ -26,7 +26,7 @@
     "deploy": "antwar -D",
     "lint": "eslint . --ext .js --ext .jsx --ext .md",
     "test": "npm run lint",
-    "sitemap": "cd build && sitemap-static --prefix=http://webpack.github.io/webpack.io/ > sitemap.xml"
+    "sitemap": "cd build && sitemap-static --prefix=https://webpack.js.org/ > sitemap.xml"
   },
   "devDependencies": {
     "antwar": "^0.8.1",
