--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
   },
   "devDependencies": {
     "alex": "^3.1.0",
-    "antwar": "^0.8.1-alpha.7d8d0447",
-    "antwar-helpers": "^0.8.1-alpha.7d8d0447",
-    "antwar-prevnext-plugin": "^0.8.1-alpha.7d8d0447",
+    "antwar": "0.8.1-alpha.7d8d0447",
+    "antwar-helpers": "0.8.1-alpha.7d8d0447",
+    "antwar-prevnext-plugin": "0.8.1-alpha.7d8d0447",
     "autoprefixer": "^6.3.7",
     "babel-core": "^6.10.4",
     "babel-eslint": "^6.1.2",
