--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ script:
   - bash ./scripts/deploy.sh
 sudo: required
 install:
-  npm install
-  sudo pip install proselint
+  - npm install
+  - sudo pip install proselint
