--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "gh-pages": "^0.11.0",
     "html-webpack-plugin": "^2.22.0",
     "json-loader": "^0.5.4",
+    "lodash": "^4.16.1",
     "markdown-loader": "^0.1.7",
     "markdownlint": "^0.2.0",
     "markdownlint-cli": "^0.2.0",
