--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
   },
   "devDependencies": {
     "alex": "^3.1.0",
-    "antwar": "0.8.1-alpha.5859eb8d",
-    "antwar-helpers": "0.8.1-alpha.5859eb8d",
-    "antwar-prevnext-plugin": "0.8.1-alpha.5859eb8d",
+    "antwar": "0.8.1-alpha.4a640fb3",
+    "antwar-helpers": "0.8.1-alpha.4a640fb3",
+    "antwar-prevnext-plugin": "0.8.1-alpha.4a640fb3",
     "autoprefixer": "^6.3.7",
     "babel-core": "^6.10.4",
     "babel-eslint": "^6.1.2",
@@ -51,6 +51,7 @@
     "gh-pages": "^0.11.0",
     "html-webpack-plugin": "^2.22.0",
     "json-loader": "^0.5.4",
+    "lodash": "^4.16.1",
     "markdown-loader": "^0.1.7",
     "markdownlint": "^0.2.0",
     "markdownlint-cli": "^0.2.0",
