Added serial task runner - executes task:x task:y task:z in sequence via Lifecycle scripts included in webpack.js.org:   start     node ./bootstrap.js   test     npm run lint
available via `npm run-script`:
  build
    node ./bootstrap.js && npm run sitemap && echo webpack.js.org > build/CNAME
  deploy
    gh-pages -d build
  lint
    run-s lint:*
  lint:js
    eslint . --ext .js --ext .jsx
  lint:md
    eslint . --ext .md
  lint:markdown
    markdownlint --config ./.markdownlintrc **/*.md *.md ./content/**/*.md
  lint:social
    alex ./**/*.md
  lint:prose
    cp .proselintrc ~/ && proselint
  sitemap
    cd build && sitemap-static --prefix=https://webpack.js.org/ > sitemap.xml

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,7 @@
         "markdown"
     ],
     
-    rules: {
+    "rules": {
         "no-undef": 2,
         "no-unreachable": 2,
         "no-unused-vars": 0,
