--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "start": "node ./bootstrap.js",
     "build": "node ./bootstrap.js && npm run sitemap && echo webpack.js.org > build/CNAME",
     "deploy": "gh-pages -d build",
-    "lint": "eslint . --ext .js --ext .jsx --ext .md",
-    "markdownlint": "markdownlint --config ./.markdownlintrc **/*.md *.md ./content/**/*.md",
-    "sociallint": "alex ./**/*.md",
-    "test": "npm run sociallint && npm run markdownlint && npm run lint ",
-    "sitemap": "cd build && sitemap-static --prefix=https://webpack.js.org/ > sitemap.xml",
-    "proselint": "cp .proselintrc ~/ && proselint"
+    "lint": "run-s lint:*",
+    "lint:js": "eslint . --ext .js --ext .jsx",
+    "lint:md": "eslint . --ext .md",
+    "lint:markdown": "markdownlint --config ./.markdownlintrc **/*.md *.md ./content/**/*.md",
+    "lint:social": "alex ./**/*.md",
+    "lint:prose": "cp .proselintrc ~/ && proselint",
+    "test": "npm run lint ",
+    "sitemap": "cd build && sitemap-static --prefix=https://webpack.js.org/ > sitemap.xml"
   },
   "devDependencies": {
     "alex": "^4.0.1",
@@ -59,6 +61,7 @@
     "modularscale-sass": "^2.1.1",
     "moment": "^2.15.1",
     "node-sass": "^3.9.3",
+    "npm-run-all": "^3.1.0",
     "postcss-loader": "^0.13.0",
     "prism-languages": "^0.3.1",
     "prismjs": "^1.5.1",
