Initial commit for conversion to Gatsby
As of this commit, you can't run this locally as it's relying on not
yet released changes to Gatsby. I've published the site however to
https://webpack-gatsby.netlify.com/

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ npm-debug.log
 build
 .antwar
 
+.intermediate-representation/
+.netlify
+styles/geomanist/geomanist-regular.woff
+styles/geomanist/geomanist-regular.woff2
+public
