--- a/package.json
+++ b/package.json
@@ -1,80 +1,50 @@
 {
   "name": "webpack.js.org",
-  "version": "0.0.0",
-  "private": true,
   "description": "The main site for all things Webpack.",
-  "homepage": "https://github.com/webpack/webpack.js.org",
+  "version": "0.0.0",
   "author": "Greg Venech",
+  "bugs": {
+    "url": "https://github.com/webpack/webpack.js.org/issues"
+  },
+  "dependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.16.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "gatsby": "^1.0.0-alpha.10",
+    "gh-pages": "^0.11.0",
+    "lodash": "^4.16.1",
+    "modularscale-sass": "^2.1.1",
+    "moment": "^2.14.1",
+    "node-sass": "^3.8.0",
+    "prismjs": "^1.5.1",
+    "react-typography": "^0.14.0",
+    "sass-loader": "^4.0.2",
+    "typography": "^0.14.0",
+    "typography-plugin-code": "^0.14.0",
+    "webpack-sources": "^0.1.2"
+  },
+  "homepage": "https://github.com/webpack/webpack.js.org",
+  "keywords": [
+    "build",
+    "documentation",
+    "tool",
+    "webpack"
+  ],
   "license": "ISC",
   "main": "n/a",
-  "keywords": [
-    "webpack",
-    "documentation",
-    "build",
-    "tool"
-  ],
+  "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/webpack/webpack.js.org.git"
   },
-  "bugs": {
-    "url": "https://github.com/webpack/webpack.js.org/issues"
-  },
   "scripts": {
-    "start": "node ./bootstrap.js",
     "build": "node ./bootstrap.js && npm run sitemap && echo webpack.js.org > build/CNAME",
     "deploy": "gh-pages -d build",
     "lint": "eslint . --ext .js --ext .jsx --ext .md",
     "markdownlint": "markdownlint --config ./.markdownlintrc **/*.md *.md ./content/**/*.md",
-    "sociallint": "alex ./**/*.md",
-    "test": "npm run sociallint && npm run markdownlint && npm run lint ",
+    "proselint": "cp .proselintrc ~/ && proselint",
     "sitemap": "cd build && sitemap-static --prefix=https://webpack.js.org/ > sitemap.xml",
-    "proselint": "cp .proselintrc ~/ && proselint"
-  },
-  "devDependencies": {
-    "alex": "^3.1.0",
-    "antwar": "0.8.1-alpha.837c8039",
-    "antwar-helpers": "0.8.1-alpha.837c8039",
-    "antwar-prevnext-plugin": "0.8.1-alpha.837c8039",
-    "autoprefixer": "^6.3.7",
-    "babel-core": "^6.10.4",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
-    "css-loader": "^0.23.1",
-    "eslint": "3.0.1",
-    "eslint-loader": "^1.4.1",
-    "eslint-plugin-markdown": "^1.0.0-beta.2",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "gh-pages": "^0.11.0",
-    "html-webpack-plugin": "^2.22.0",
-    "json-loader": "^0.5.4",
-    "lodash": "^4.16.1",
-    "markdown-loader": "^0.1.7",
-    "markdownlint": "^0.2.0",
-    "markdownlint-cli": "^0.2.0",
-    "marked": "^0.3.5",
-    "modularscale-sass": "^2.1.1",
-    "moment": "^2.14.1",
-    "node-sass": "^3.8.0",
-    "postcss-loader": "^0.9.1",
-    "prism-languages": "^0.3.1",
-    "prismjs": "^1.5.1",
-    "raw-loader": "^0.5.1",
-    "sass-loader": "^4.0.0",
-    "sitemap-static": "^0.3.1",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.1",
-    "webpack-merge": "^0.14.0",
-    "yaml-frontmatter-loader": "0.0.3"
-  },
-  "dependencies": {
-    "react": "^15.2.1",
-    "react-dom": "^15.2.1",
-    "react-router": "^2.5.2"
+    "sociallint": "alex ./**/*.md",
+    "start": "node ./bootstrap.js",
+    "test": "npm run sociallint && npm run markdownlint && npm run lint "
   }
 }
