--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "gatsby": "^1.0.0-alpha.10",
     "gh-pages": "^0.11.0",
+    "glamor": "^2.15.6",
+    "gray-percentage": "^2.0.0",
     "lodash": "^4.16.1",
     "modularscale-sass": "^2.1.1",
     "moment": "^2.14.1",
     "node-sass": "^3.8.0",
     "prismjs": "^1.5.1",
+    "react-addons-shallow-compare": "^15.3.2",
+    "react-icons": "^2.2.1",
     "react-typography": "^0.14.0",
     "sass-loader": "^4.0.2",
     "typography": "^0.14.0",
