--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-sass": "^3.8.0",
     "prismjs": "^1.5.1",
     "react-addons-shallow-compare": "^15.3.2",
+    "react-headroom": "^2.1.2",
     "react-icons": "^2.2.1",
     "react-typography": "^0.14.0",
     "sass-loader": "^4.0.2",
