--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,11 @@
     "plugins": [
         "markdown"
     ],
-    
+
+    "globals": {
+        "__DEV__": true
+    },
+
     "rules": {
         "no-undef": 2,
         "no-unreachable": 2,
