--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "preact-compat": "^3.6.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-headroom": "^2.1.2",
     "react-router": "^2.8.1"
   }
 }
