--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "gh-pages": "^0.11.0",
+    "highlight-loader": "^0.7.2",
     "html-webpack-plugin": "^2.22.0",
     "json-loader": "^0.5.4",
     "lodash": "^4.16.1",
@@ -83,7 +84,6 @@
     "preact-compat": "^3.6.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-highlight": "^0.9.0",
     "react-router": "^2.8.1"
   }
 }
