--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-headroom": "^2.1.2",
-    "react-router": "^2.8.1"
+    "react-router": "^2.8.1",
+    "react-sticky": "^5.0.5"
   }
 }
