--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "yaml-frontmatter-loader": "0.0.3"
   },
   "dependencies": {
+    "filesize": "^3.3.0",
     "preact": "^6.2.1",
     "preact-compat": "^3.6.0",
     "react": "^15.3.2",
