--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "build-test": "http-server build/",
     "deploy": "gh-pages -d build",
     "lint": "run-s lint:*",
+    "lint:links": "hyperlink build/index.html -r",
     "lint:js": "eslint . --ext .js --ext .jsx",
     "lint:md": "eslint . --ext .md",
     "lint:markdown": "markdownlint --config ./.markdownlintrc **/*.md *.md ./content/**/*.md",
@@ -36,10 +37,10 @@
   },
   "devDependencies": {
     "alex": "^3.1.0",
-    "antwar": "0.8.1-alpha.95152042",
-    "antwar-helpers": "0.8.1-alpha.95152042",
-    "antwar-interactive": "0.8.1-alpha.95152042",
-    "antwar-prevnext-plugin": "0.8.1-alpha.95152042",
+    "antwar": "0.8.1-alpha.50699ca3",
+    "antwar-helpers": "0.8.1-alpha.50699ca3",
+    "antwar-interactive": "0.8.1-alpha.50699ca3",
+    "antwar-prevnext-plugin": "0.8.1-alpha.50699ca3",
     "autoprefixer": "^6.3.7",
     "babel-core": "^6.10.4",
     "babel-eslint": "^6.1.2",
@@ -57,6 +58,7 @@
     "gh-pages": "^0.11.0",
     "html-webpack-plugin": "^2.22.0",
     "http-server": "^0.9.0",
+    "hyperlink": "^2.5.0",
     "json-loader": "^0.5.4",
     "lodash": "^4.16.1",
     "markdown-loader": "^0.1.7",
