Pipe lint:links through tap-nyan

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build-test": "http-server build/",
     "deploy": "gh-pages -d build",
     "lint": "run-s lint:*",
-    "lint:links": "hyperlink build/index.html -r",
+    "lint:links": "hyperlink build/index.html -r | tap-nyan",
     "lint:js": "eslint . --ext .js --ext .jsx",
     "lint:md": "eslint . --ext .md",
     "lint:markdown": "markdownlint --config ./.markdownlintrc **/*.md *.md ./content/**/*.md",
@@ -76,6 +76,7 @@
     "sass-loader": "^4.0.2",
     "sitemap-static": "^0.3.1",
     "style-loader": "^0.13.1",
+    "tap-nyan": "0.0.2",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1",
