--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "start": "node ./bootstrap.js",
-    "build": "node ./bootstrap.js && npm run sitemap && echo webpack.js.org > build/CNAME",
+    "build": "rm -rf build/ && node ./bootstrap.js && npm run sitemap && echo webpack.js.org > build/CNAME",
     "build-test": "http-server build/",
     "deploy": "gh-pages -d build",
     "lint": "run-s lint:*",
@@ -37,10 +37,10 @@
   },
   "devDependencies": {
     "alex": "^3.1.0",
-    "antwar": "0.8.1-alpha.50699ca3",
-    "antwar-helpers": "0.8.1-alpha.50699ca3",
-    "antwar-interactive": "0.8.1-alpha.50699ca3",
-    "antwar-prevnext-plugin": "0.8.1-alpha.50699ca3",
+    "antwar": "0.8.1-alpha.549a2f3a",
+    "antwar-helpers": "0.8.1-alpha.549a2f3a",
+    "antwar-interactive": "0.8.1-alpha.549a2f3a",
+    "antwar-prevnext-plugin": "0.8.1-alpha.549a2f3a",
     "autoprefixer": "^6.3.7",
     "babel-core": "^6.10.4",
     "babel-eslint": "^6.1.2",
