--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "antwar-helpers": "0.8.1-alpha.549a2f3a",
     "antwar-interactive": "0.8.1-alpha.549a2f3a",
     "antwar-prevnext-plugin": "0.8.1-alpha.549a2f3a",
+    "async": "^2.1.2",
     "autoprefixer": "^6.3.7",
     "babel-core": "^6.10.4",
     "babel-eslint": "^6.1.2",
@@ -56,6 +57,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "gh-pages": "^0.11.0",
+    "github": "^5.2.3",
     "html-webpack-plugin": "^2.22.0",
     "http-server": "^0.9.0",
     "hyperlink": "^2.5.0",
@@ -65,6 +67,7 @@
     "markdownlint": "^0.2.0",
     "markdownlint-cli": "^0.2.0",
     "marked": "^0.3.6",
+    "mkdirp": "^0.5.1",
     "modularscale-sass": "^2.1.1",
     "moment": "^2.15.1",
     "node-sass": "^3.9.3",
@@ -73,6 +76,7 @@
     "prism-languages": "^0.3.1",
     "prismjs": "^1.5.1",
     "raw-loader": "^0.5.1",
+    "request": "^2.75.0",
     "sass-loader": "^4.0.2",
     "sitemap-static": "^0.3.1",
     "style-loader": "^0.13.1",
