--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "build": "rm -rf build/ && node ./bootstrap.js && npm run sitemap && echo webpack.js.org > build/CNAME",
     "build-test": "http-server build/",
     "deploy": "gh-pages -d build",
+    "fetch": "scripts/fetch.sh",
     "lint": "run-s lint:*",
     "lint:links": "hyperlink build/index.html -r | tap-nyan",
     "lint:js": "eslint . --ext .js --ext .jsx",
