Hook up generated data with /loaders and /plugins
We have initial loader and plugin indices now. Remaining issues:

* Loaders and plugins can have double headers. This could be solved
either here or at the readme files. Probably better here.
* The edit buttons of these sections should point to the readme files.
* The indices of loaders and plugins need design. Perhaps it would make
sense to show tables with related data there.

Note that you can add information below `content/loaders` and
`content/plugins`. It gets copied over to the system. Plugins like
`CommonsChunkPlugin` could be documented this way.

--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "url": "https://github.com/webpack/webpack.js.org/issues"
   },
   "scripts": {
-    "start": "node ./bootstrap.js",
-    "build": "rm -rf build/ && node ./bootstrap.js && npm run sitemap && echo webpack.js.org > build/CNAME",
+    "start": "npm run init:generated && node ./bootstrap.js",
+    "build": "npm run init:generated && rm -rf build/ && node ./bootstrap.js && npm run sitemap && echo webpack.js.org > build/CNAME",
     "build-test": "http-server build/",
     "deploy": "gh-pages -d build",
     "fetch": "scripts/fetch.sh",
+    "init:generated": "mkdirp ./generated/loaders && cp -rf ./content/loaders/ ./generated/loaders && mkdirp ./generated/plugins && cp -rf ./content/plugins/ ./generated/plugins",
     "lint": "run-s lint:*",
     "lint:links": "hyperlink build/index.html -r | tap-nyan",
     "lint:js": "eslint . --ext .js --ext .jsx",
