Replace cp with ncp
This should work cross-platform.

Closes #276.

--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
     "build-test": "http-server build/",
     "deploy": "gh-pages -d build",
     "fetch": "scripts/fetch.sh",
-    "init:generated": "mkdirp ./generated/loaders && cp -rf ./content/loaders/ ./generated/loaders && mkdirp ./generated/plugins && cp -rf ./content/plugins/ ./generated/plugins",
+    "init:generated": "mkdirp ./generated/loaders && ncp ./content/loaders/ ./generated/loaders && mkdirp ./generated/plugins && ncp ./content/plugins/ ./generated/plugins",
     "lint": "run-s lint:*",
     "lint:links": "hyperlink build/index.html -r | tap-nyan",
     "lint:js": "eslint . --ext .js --ext .jsx",
     "lint:md": "eslint . --ext .md",
     "lint:markdown": "markdownlint --config ./.markdownlintrc **/*.md *.md ./content/**/*.md",
     "lint:social": "alex ./**/*.md",
-    "lint:prose": "cp .proselintrc ~/ && proselint",
+    "lint:prose": "ncp .proselintrc ~/ && proselint",
     "test": "npm run lint ",
     "sitemap": "cd build && sitemap-static --prefix=https://webpack.js.org/ > sitemap.xml"
   },
@@ -72,6 +72,7 @@
     "mkdirp": "^0.5.1",
     "modularscale-sass": "^2.1.1",
     "moment": "^2.15.1",
+    "ncp": "^2.0.0",
     "node-sass": "^3.9.3",
     "npm-run-all": "^3.1.0",
     "postcss-loader": "^0.13.0",
