--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,9 @@
 {
   "presets": [
-    "es2015",
+    "latest",
     "react"
   ],
   "plugins": [
-    "syntax-object-rest-spread",
-    "transform-object-rest-spread"
+    "syntax-object-rest-spread"
   ]
 }
