add transform, use env [skip ci]

--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,9 @@
 {
   "presets": [
-    "latest",
+    "env",
     "react"
   ],
   "plugins": [
-    "syntax-object-rest-spread"
+    "transform-object-rest-spread"
   ]
 }
