Remove the nyan reporter
The nyan reporter causes thousands of unnecessary lines
in the Travis CI output which made it hard to know what test failed

Fixes #330

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "fetch": "scripts/fetch.sh",
     "init:generated": "mkdirp ./generated/loaders && ncp ./content/loaders/ ./generated/loaders && mkdirp ./generated/plugins && ncp ./content/plugins/ ./generated/plugins",
     "lint": "run-s lint:*",
-    "lint:links": "hyperlink build/index.html -r | tap-nyan",
+    "lint:links": "hyperlink build/index.html -r | tap-min",
     "lint:js": "eslint . --ext .js --ext .jsx",
     "lint:md": "eslint . --ext .md",
     "lint:markdown": "markdownlint --config ./.markdownlintrc **/*.md *.md ./content/**/*.md",
@@ -82,7 +82,7 @@
     "sass-loader": "^4.0.2",
     "sitemap-static": "^0.3.1",
     "style-loader": "^0.13.1",
-    "tap-nyan": "0.0.2",
+    "tap-min": "^1.1.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1",
