add support for browsers without native fetch

--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "preact-compat": "^3.6.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-router": "^2.8.1"
+    "react-router": "^2.8.1",
+    "whatwg-fetch": "^2.0.1"
   }
 }
