配置出错导致无法启动项目，回滚到上次可用配置

--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,10 @@
 {
   "presets": [
-    "env",
+    "es2015",
     "react"
   ],
   "plugins": [
+    "syntax-object-rest-spread",
     "transform-object-rest-spread"
   ]
 }
