Updating the Organization component and the projects data

--- a/components/organization/projects.json
+++ b/components/organization/projects.json
@@ -188,7 +188,7 @@
 	{
 		"repo": "webpack/worker-loader",
 		"npm": "worker-loader",
-		"maintainer": 
+		"maintainer": ""
 	},
 	{
 		"repo": "webpack/mocha-loader",
