--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
   },
   "devDependencies": {
     "alex": "^3.1.0",
-    "antwar": "0.8.1-alpha.d45b49e2",
-    "antwar-helpers": "0.8.1-alpha.d45b49e2",
-    "antwar-interactive": "0.8.1-alpha.d45b49e2",
-    "antwar-prevnext-plugin": "0.8.1-alpha.d45b49e2",
+    "antwar": "^0.8.1-alpha.22838a12",
+    "antwar-helpers": "^0.8.1-alpha.22838a12",
+    "antwar-interactive": "^0.8.1-alpha.22838a12",
+    "antwar-prevnext-plugin": "^0.8.1-alpha.22838a12",
     "async": "^2.1.2",
     "autoprefixer": "^6.3.7",
     "babel-core": "^6.10.4",
