--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build-test": "npm run build && http-server build/",
     "deploy": "gh-pages -d build",
     "fetch": "scripts/fetch.sh",
-    "init:generated": "mkdirp ./generated/loaders && ncp ./content/loaders/ ./generated/loaders && mkdirp ./generated/plugins && ncp ./content/plugins/ ./generated/plugins",
+    "init:generated": "mkdirp ./generated/loaders && mkdirp ./generated/plugins ",
     "lint": "run-s lint:*",
     "lint:links": "hyperlink build/index.html -r | tap-min",
     "lint:js": "eslint . --ext .js --ext .jsx",
@@ -73,7 +73,6 @@
     "mkdirp": "^0.5.1",
     "modularscale-sass": "^2.1.1",
     "moment": "^2.15.1",
-    "ncp": "^2.0.0",
     "node-sass": "^3.9.3",
     "npm-run-all": "^3.1.0",
     "postcss-loader": "^0.13.0",
