--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webpack.js.org",
   "version": "0.0.0",
   "private": true,
-  "description": "The main site for all things Webpack.",
+  "description": "The main site for all things webpack.",
   "homepage": "https://github.com/webpack/webpack.js.org",
   "author": "Greg Venech",
   "license": "CC BY",
