--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "fetch": "scripts/fetch.sh",
     "init:generated": "mkdirp ./generated/loaders && mkdirp ./generated/plugins ",
     "lint": "run-s lint:*",
-    "lint:links": "hyperlink -r --exclude https://opencollective.com/webpack/*/*/website build/index.html",
+    "lint:links": "hyperlink -r --exclude https://opencollective.com/webpack/*/*/website build/index.html | ./scripts/check-links.js --skip 10",
     "lint:js": "eslint . --ext .js --ext .jsx",
     "lint:md": "eslint . --ext .md",
     "lint:markdown": "markdownlint --config ./.markdownlintrc **/*.md *.md ./content/**/*.md",
@@ -56,6 +56,7 @@
     "babel-preset-react": "^6.11.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.25.0",
+    "duplexer": "^0.1.1",
     "eslint": "3.6.0",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-markdown": "^1.0.0-beta.2",
@@ -88,6 +89,8 @@
     "sitemap-static": "^0.3.1",
     "style-loader": "^0.13.1",
     "tap-min": "^1.1.0",
+    "tap-parser": "^5.3.3",
+    "through2": "^2.0.3",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1",
