--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "request": "^2.75.0",
     "sass-loader": "^4.0.2",
     "sitemap-static": "^0.3.1",
+    "standard-version": "^4.0.0",
     "style-loader": "^0.13.1",
     "tap-min": "^1.1.0",
     "tap-parser": "^5.3.3",
