--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "lint:social": "alex ./**/*.md",
     "lint:prose": "cp .proselintrc ~/ && proselint content",
     "test": "npm run lint ",
-    "sitemap": "cd build && sitemap-static --prefix=https://webpack.js.org/ > sitemap.xml"
+    "sitemap": "cd build && sitemap-static --prefix=https://webpack.js.org/ > sitemap.xml",
+    "release": "standard-version"
   },
   "devDependencies": {
     "alex": "^3.1.0",
