fix: update markdownlint configuration and fix a bunch of errors

--- a/.markdownlintrc
+++ b/.markdownlintrc
@@ -2,7 +2,8 @@
   "default": true,
   "MD002": false,
   "MD007": { "indent": 4 },
-  "MD013": { "line_length": 500 },
+  "MD013": { "line_length": 600 },
+  "MD026": false,
   "MD029": { "style": "ordered"},
   "MD033": false,
   "MD034": false,
