Rename to .markdownlint.json
Rename markdownlint config file. This enables syntax highlighting, and
the VS Code extension `markdownlint` to pick up the file.

--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,6 @@ indent_style = space
 indent_size = 2
 
 # Format Config
-[{package.json,.alexrc,babelrc,.eslintignore,.eslintrc,.markdownlintrc,.proselintrc}]
+[{package.json,.alexrc,babelrc,.eslintignore,.eslintrc,.markdownlint.json,.proselintrc}]
 indent_style = space
 indent_size = 2
