--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@ node_modules
 npm-debug.log
 build
 generated
+components/support/support-backers.json
+components/support/support-sponsors.json
 .antwar
