fix: add `npm run fetch` to start script
This prevents any `import` statements from failing (e.g. in the `Support`
component) and ensures the developer will see all external content without
having to run this command separately.

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "node": ">=6.9"
   },
   "scripts": {
-    "start": "npm run init:generated && node ./bootstrap.js",
+    "start": "npm run init:generated && npm run fetch && node ./bootstrap.js",
     "build": "npm run init:generated && rm -rf build/ && node ./bootstrap.js && npm run sitemap && echo webpack.js.org > build/CNAME",
     "build-test": "npm run build && http-server build/",
     "deploy": "gh-pages -d build",
