set up webpack-ko

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ generated
 components/support/support-backers.json
 components/support/support-sponsors.json
 .antwar
+webpack-ko-lutece
+webpack-ko-lutece.pub
