docs(guides): start fetching starter-kits data

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@ build
 generated
 components/support/support-backers.json
 components/support/support-sponsors.json
+components/starter-kits/starter-kits-data.json
 .antwar
