--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^2.8.1",
+    "tool-list": "^0.9.1",
     "whatwg-fetch": "^2.0.1"
   }
 }
